# dexompiler-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
resources/: classes.dex
src/: apk.rs  block.rs  cli.rs  errors.rs  instruction.rs  lib.rs  main.rs  manifest.rs  opcode.rs  opcodes.rs  permissions.rs  utils.rs
src/cfg/: block.rs  error.rs  loop.rs  mod.rs
src/dex/: errors.rs  instruction.rs  method.rs  mod.rs  opcode.rs
src/dex_parsing/: instruction.rs  mod.rs  model.rs  opcode.rs
src/instruction/: definition.rs  error.rs  format.rs  implementation.rs  mod.rs  opcode.rs
src/manifest/: component.rs  intent_filter.rs  metadata.rs  mod.rs
src/manifest_parsing/: mod.rs  model.rs
tests/dex/: call_graph.dex  hello_world.dex
tests/manifest/: a.xml  b.xml  c.xml
