[package]
name = "dexompiler"
version = "1.0.0"
authors = ["yourlogarithm <vlad.sebastian.cretu.dev@gmail.com>"]
keywords = [
    "dex",
    "decompiler",
    "android",
    "dalvik",
    "art",
]
repository = "https://github.com/yourlogarithm/dexompiler-rs"
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2021"

[dependencies]
thiserror = "1.0.58"
dex = { path = "dex-parser" }
num-derive = "0.4.2"
num-traits = "0.2.19"
bitvec = "1.0.1"
log = { version = "0.4.25", features = ["kv"] }

[dev-dependencies]
zip = "2.1.3"
